@@ -83,9 +83,6 @@
                             <div title="When on, the ZooKeeper log cleanup task is active">
                                 <label for="$BASE_ID$-cleanup-enabled">Log Cleanup Task</label><input type="checkbox" id="$BASE_ID$-cleanup-enabled" name="$BASE_ID$-cleanup-enabled"/><br clear="all"/>
                             </div>
-                            <div title="When on, the ZooKeeper instance will get restarted even if it is not in the config list of servers">
-                                <label for="$BASE_ID$-unlisted-restarts">Restarts When Unlisted</label><input type="checkbox" id="$BASE_ID$-unlisted-restarts" name="unlisted-restarts"/><br clear="all"/>
-                            </div>
                             <div title="When on, the ZooKeeper log backup task is active" id="$BASE_ID$-backups-enabled-control" class="ui-helper-hidden">
                                 <label for="$BASE_ID$-backups-enabled">Backup Logs Task</label><input type="checkbox" id="$BASE_ID$-backups-enabled" name="backups-enabled"/><br clear="all"/>
                             </div>
