@@ -10,6 +10,8 @@ so now all backups as well as the active logs are indexed.
 * When the auto-manage instances state changes, clear the heartbeat. This avoids an edge case where
 an instance will get cleaned immediately.
 
+* Removed "Restarts When Unlisted" button. It doesn't have any meaning anymore.
+
 1.2.2 - July 12, 2012
 =====================
 * Major bug: Starting a rolling config from the UI leaked S3 lock files which stopped
